added UserController and other misc updates